$Id: ChangeLog,v 1.88 2010/01/11 13:07:52 tho Exp $

ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html

LibU 2.0.0
	- [config] u_config_print_to_fp with brace delimiters for children records;
	  documentation fixes by Mickael Auger
	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
	  that is supplied to the callback function
	- [uri] complete support for RFC 3986; added u_uri_unparse interface to 
	  create conformant URI strings; added tester
	- [net] module implementation revamped, too many changes to be listed here:
	  see the INTERFACE_CHANGES document
	- fix configure bug which prevented IPv6 and UNIX sockets bits inclusion;
	  also bring back to life --no_ipv6 and --no_unixsock configure flags; 
	  new --no_sctp command line option to explicitly disable SCTP bits
	- [pwd] use u_strtok instead of deprecated u_tokenize internally
	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed
	- [misc] some minor fixes 

LibU 1.4.1
	- [missing] u_va_copy added
	- [string] u_string_do_vprintf bug fix (don't use va_list twice)
	- [test] list tests fix for 64-bit platforms

LibU 1.4.0
	- [config] u_config_get_subkey_value_b bug fix
	- [list] u_list_clear added
	- [misc] u_strlcpy and u_strlcat added
	- added shared lib support for MinGW, Cygwin, Solaris and Dragonfly BSD
	  (need MaKL >= 1.8.x)
	- [list] u_list_foreach and u_list_iforeach macros added
	- [list] u_list_first and u_list_next added to efficiently iterate on lists
	- [misc] added u_strtok_cleanup facility 
	- [misc] deprecate u_tokenize in favour of u_strtok

LibU 1.3.1:
	- [array] add needed #include <stdint.h>
	- [misc] u_atoi fix
	- [misc] u_strtok added
	- [config] fix u_string_aprintf calls (build fix)

LibU 1.3.0:
	- [config] u_config_sort_children added
	- [config] u_config_del_child added
	- [log] u_log_set_{lock,unlock} added to setup locking callbacks (needed on 
	  multi-threading environments)