@@ -1,4 +1,4 @@
-# $Id: mk_modules,v 1.5 2008/06/25 10:10:15 tho Exp $
+# $Id: mk_modules,v 1.6 2010/01/14 12:28:29 tho Exp $
 
 #
 # --no_hmap
@@ -102,6 +102,19 @@ makl_args_def   \
 __makl_no_array () 
 { 
     makl_set_var "NO_ARRAY" ; 
+}
+
+#
+# --no_ringbuffer
+#
+makl_args_def       \
+    "no_ringbuffer" \
+    "" ""           \
+    "disable ring buffer module"
+
+__makl_no_ringbuffer () 
+{ 
+    makl_set_var "NO_RB" ;
 }
 
 #
