@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.16 2010/01/05 21:29:41 tho Exp $
+# $Id: Makefile,v 1.17 2010/01/14 12:28:29 tho Exp $
 
 include common.mk
 include ../Makefile.conf
@@ -42,6 +42,9 @@ ifndef NO_LIST
 endif
 ifndef NO_ARRAY
     SRCS += toolbox/array.c
+endif
+ifndef NO_RB
+    SRCS += toolbox/rb.c
 endif
 ifdef SHLIB_NO_UNDEFINED_SYMS
     SRCS += toolbox/facility.c
