@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.88 2010/01/11 13:07:52 tho Exp $
+$Id: ChangeLog,v 1.89 2010/01/14 12:28:29 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU 2.0.0
+	- [rb] added new ring buffer module
 	- [config] u_config_print_to_fp with brace delimiters for children records;
 	  documentation fixes by Mickael Auger
 	- [hmap] added u_hmap_foreach_arg which accepts a user defined parameter
